--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^25.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "pg": "^8.0.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.3",
     "supertest": "^4.0.2"
   }
 }
