--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "pg": "^8.0.2"
+    "pg": "^8.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
