--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server-dev": "nodemon server/server.js",
+    "start": "node server/server.js",
+    "react-dev": "webpack -d -w"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +16,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "http-server": "^0.12.1",
     "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -24,7 +28,9 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.3",
     "supertest": "^4.0.2",
     "webpack": "^4.42.1",
