--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.11",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "css-loader": "^3.5.2",
     "express": "^4.17.1",
     "http-server": "^0.12.1",
     "jest": "^25.3.0",
@@ -22,7 +24,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.0.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "style-loader": "^1.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
